--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+### PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/movieappdb
+spring.datasource.username=postgres
+spring.datasource.password=mypassword
+server.port=8081
 
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
